<resources>
    <string name="app_name">AulaIOD</string>
    <string name="botao_cadastro">Crie sua conta!</string>
    <string name="link_login">Já tem uma conta? Clique aqui para entrar!</string>
    <string name="titulo_entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="link_esqueci_senha">Esqueci minha senha</string>
    <string name="titulo_cadastrar">Cadastrar</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="nome">Nome</string>
    <string name="status_contador">O contador esta em</string>
    <string name="botao_contador">Contador</string>
    <string name="msg_erro">Mensagem de erro</string>
    <string name="email_erro">Email já cadastrado</string>
    <string name="feed">Feed de Notícias</string>
    <string name="notificacao_sincronizacao">Seu email ainda não foi validado. Verifique sua caixa de entrada do email pelo link de validação.</string>
    <string name="credenciais_invalidas">Credendicais Invalidas</string>
</resources>